--- a/hacker_news.ipynb
+++ b/hacker_news.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src = \"hacker_news.png\" width = \"800\">"
+    "![hacker_news](images/hacker_news.png)"
    ]
   },
   {
