--- a/hacker_news.ipynb
+++ b/hacker_news.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![hacker_news](images/hacker_news.png)"
+    "![hacker_news](hacker_news.png)"
    ]
   },
   {
